fix screen wrapping

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 	position: relative;
 	padding: 0;
 	margin: 0;
+  overflow: hidden;
 }
 
 .config-sidebar {
@@ -33,7 +34,7 @@ body {
 
 .slider-value {
 	display: inline-block;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
 }
